# collector-engine

./: .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  architecture.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/instructions/: general.instructions.md
.github/workflows/: ci.yml
collector_engine/app/application/services/: collect_logs.py  collect_receipts.py  collect_transactions.py  flush_buffer.py  load_chain_scoped_data_to_sql.py  load_contract_scoped_data_to_sql.py  load_to_sql.py  run_pipeline.py
collector_engine/app/collectors/: constance.py
collector_engine/app/collectors/core/: bytes_utils.py  logs_core.py  receipts_core.py  transactions_core.py
collector_engine/app/config/: __init__.py  settings.py
collector_engine/app/core/: logs_core.py  ports.py  receipts_core.py  transactions_core.py
collector_engine/app/domain/ports/: out.py
collector_engine/app/domain/pure/: block_ranges.py  blocks_timestamps.py  buffer_utils.py  logs.py  receipts.py  transactions.py
collector_engine/app/infrastructure/config/: settings.py
collector_engine/app/infrastructure/factories/: evm_reader_factory.py  loader_factory.py  storage_factory.py
collector_engine/app/interface/: collector_tasks.py
collector_engine/app/registry/: registry.py  schemas.py
collector_engine/app/shell/: exceptions.py
collector_engine/app/tasks/: collector_tasks.py
collector_engine/cli/: __main__.py
collector_engine/tests/integration/: test_collect_logs.py  test_collect_receipts.py  test_collect_transactions.py  test_parquet_store.py  test_pipeline.py  test_web3_reader.py
collector_engine/tests/unit/: test_bytes_utils.py  test_logs_core.py  test_parquet_storage_adapter.py  test_receipts_core.py  test_transactions_core.py  test_web3_evm_adapter.py
docs/: architecture.md  prd.md
docs/adr/: 0001-parquet-first-ingestion.md  001-clean-architecture-layers.md  002-parquet-first-ingestion.md  003-parquet-buffering-and-resume.md  004-dataset-scope-and-layout.md
docs/db/: erd.dbml
docs/diagrams/: data_flow.drawio
docs/knowledge/evm/: glossary.md  three_source_of_data.md
(+32 files in other folders)
