[project]
name = "collector-engine"
version = "0.1.0"
description = ""
authors = [
    {name = "Rafal Skrzydelski"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
web3 = "^7.6.1"
loguru = "^0.7.2"
python-dotenv = "^1.0.1"
typer = "^0.12.3"
pydantic-settings = "^2.2.1"
requests = "^2.32.3"
pandas = "^2.2.3"
pandasgui = "^0.2.14"
numpy = "^2.3.1"
ipykernel = "^6.29.5"
notebook = "^7.4.5"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
pytest-mock = "^3.15.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [
    "collector_engine/notebooks"
]