[project]
name = "collector-engine"
version = "0.1.0"
description = ""
authors = [{name = "Rafal Skrzydelski"}]
readme = "README.md"
requires-python = ">=3.13,<4.0"

dependencies = [
  "web3>=7.6.1,<8.0.0",
  "loguru>=0.7.2,<1.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "typer>=0.12.3,<1.0.0",
  "pydantic-settings>=2.2.1,<3.0.0",
  "requests>=2.32.3,<3.0.0",
  "pandas>=2.2.3,<3.0.0",
  "pandasgui>=0.2.14,<0.3.0",
  "numpy>=2.3.1,<3.0.0",
  "ipykernel>=6.29.5,<7.0.0",
  "notebook>=7.4.5,<8.0.0",
  "inquirerpy>=0.3.4",
  "psycopg>=3.3.2",
]

[dependency-groups]
dev = [
  "pytest>=8.4.2,<9.0.0",
  "pytest-asyncio>=1.2.0,<2.0.0",
  "pytest-mock>=3.15.1,<4.0.0",
  "ipykernel>=6.29.5,<7.0.0",
  "mypy>=1.11.2,<2.0.0",
  "pre-commit>=3.7.0,<4.0.0",
  "ruff>=0.14.4",
  "types-PyYAML>=6.0.0,<7.0.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["collector_engine/notebooks"]

[tool.mypy]
ignore_missing_imports = true
python_version = "3.13"
strict = false
disallow_untyped_defs = true
warn_unused_ignores = true

files = [
  "collector_engine/app"
]
exclude = "(?x)(^collector_engine/notebooks/|^collector_engine/tests/)"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
  "hexbytes",
  "hexbytes.*",
  "web3",
  "web3.*",
  "eth_typing",
  "eth_typing.*",
]
